--- a/styles/main.css
+++ b/styles/main.css
@@ -432,6 +432,7 @@ button:hover {
 
 .footer {
     font-family: PFAgoraSansProRegular, sans-serif;
+    display: flex;
     background-color: #f7d518;
     text-align: center;
     padding: 51px 14.5% 55px 12%;
@@ -469,7 +470,7 @@ button:hover {
 }
 
 .social {
-    display: inline-flex;
+    display: flex;
     justify-content: space-around;
     float: right;
     flex-direction: column;
